objects/EUR_CRM_POSM_Audit_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Audit__c</fullName>
        <label>POSM Audit</label>
        <referenceTo>EUR_CRM_POSM_Audit__c</referenceTo>
        <relationshipLabel>POSM Audit Item (EU)</relationshipLabel>
        <relationshipName>POSM_Audit_Item_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material_Code__c</fullName>
        <formula>EUR_CRM_POS_Material__r.EUR_CRM_POS_Material_Code__c</formula>
        <label>POS Material Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>POSM Audit Item (EU)</relationshipLabel>
        <relationshipName>POSM_Audit_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Quantity__c</fullName>
        <label>Given Quantity during Visit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POSM Audit Item (EU)</label>
    <nameField>
        <displayFormat>PMI-{00000000}</displayFormat>
        <label>POSM Audit Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POSM Audit Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BG Off Trade POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BG On Trade POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_On_Trade_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR RU On Trade POSM Audit Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>